docs: added swagger for each api
